--- a/README
+++ b/README
@@ -23,4 +23,5 @@ To run this project locally, follow these steps:
 
 1. **Clone the repository**:
    ```bash
-   git clone https://github.com/your-username/Onlineportfolio.git
+  https://github.com/Gnaloyan/Onlineportfolio
+2. flask run
